# zedroscenter

zedroscenter/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
zedroscenter/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
zedroscenter/catkin_generated/installspace/: zedroscenter.pc  zedroscenterConfig.cmake
zedroscenter/catkin_generated/stamps/zedroscenter/: package.xml.stamp
zedroscenter/include/zedroscenter/: centroid-tracking.hpp
zedroscenter/src/: centroid-tracking.cpp  original.cpp  zedroscenter_node.cpp
